@@ -101,6 +101,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13265) Media handler is missing 'image/x-bmp'
 * (bug 13407) MediaWiki:Powersearch is used in two places
 * (bug 13403) Fix cache invalidation of history pages when old revisions change
+* (bug 11563) Deprecated SearchMySQL4 class; merged code to SearchMySQL
 
 
 === API changes in 1.13 ===
